<resources>
    <string name="app_name">Dude Ways</string>

    <string name="splash1">"Welcome to our travel community, where every journey begins with a new friendship"</string>
    <string name="splash2">"Where wanderlust meets companionship - find your perfect travel partner today!"</string>
    <string name="splash3">"Join a global network of explorers and find your ideal travel buddy."</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terms_and_conditions">By continuing you agree to our \n<u>Terms of Service Privacy Policy \nContent Policy</u></string>
    <string name="id_verification_description">An ID verification helps us check that you are a real person and you are really you. It also helps us keep secure and trustworthy. How does it work?\n\nFirst you will add a picture of yourself and provide a clear picture of your ID. We will then quickly match both the pictures.</string>
    <string name="more"><u>more...</u></string>
    <string name="less"><u>less...</u></string>
    <string name="default_web_client_id">789941112934-hh4j9ueivjq4uei4e2k3g3414qvmhnod.apps.googleusercontent.com</string>
    <string name="back">Back</string>
    <string name="look_straight_to_the_camera">Look straight to the Camera</string>
    <string name="click_here_to_upload"><u>Click here to upload payment screenshot</u></string>
    <string name="screenshot_uploaded"><u>Screenshot uploaded</u></string>

    <string name="admob_app_id">ca-app-pub-8693482193769963~4468032819</string>
    <string name="shafeeka">Shafeeka</string>
    <string name="type_a_message">Type a message ...</string>
    <string name="txtdioglog">Users safety is our top priority. \nTo create a secure environment for female users\n\nMale users are required to complete ID verification before they can chat with female users.\n\nThis process helps us ensure that all male users are genuine, making your experience safer and more enjoyable.</string>
    <string name="pay_above_upi_i_d_and_upload_screenshot">Pay above UPI I\'d and upload screenshot</string>


    <string name="status_bar">Status bar replacement</string>
    <string name="card_number">Card Number</string>
    <string name="date_hint">Expiry MM/YY</string>
    <string name="cvv_hint">CVV</string>
    <string name="checkout">Checkout</string>
    <string name="error_message_juspay">Failed to initiate Payment. Please try again!</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="title_fragment_choose_payment_option">Choose a Payment Option</string>
    <string name="title_fragment_credit_card_form">Credit Card</string>
    <string name="title_fragment_debit_card_form">Debit Card</string>
    <string name="title_fragment_emi_form">EMI</string>
    <string name="title_fragment_upi">Enter VPA</string>
    <string name="choose_your_bank">Choose your Bank</string>
    <string name="choose_your_wallet">Choose your Wallet</string>
    <string name="search_your_bank">Search your Bank</string>
    <string name="search_your_wallet">Search your Wallet</string>
    <string name="brand_trust_logos">Brand trust logos</string>
    <string name="choose_your_credit_card">Choose your Credit Card</string>
    <string name="choose_an_emi_option">Choose an EMI Option</string>
    <string name="emi_on_credit_card">EMI on Credit Card</string>
    <string name="wallets">Wallets</string>
    <string name="net_banking">Net Banking</string>
    <string name="upi">UPI</string>
    <string name="enter_your_virtual_payment_address">Enter your virtual payment address</string>
    <string name="example_mohit_icici">Example: mohit@icici</string>
    <string name="verify_payment">Verify Payment</string>
    <string name="verify_payment_image_description">Verify Payment Image</string>
    <string name="waiting">Waiting&#8230;</string>
    <string name="complete_payment_description">You will receive a notification on your Bank UPI app.\nPlease confirm it to complete the payment.</string>
    <string name="title_activity_wallet">WalletActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="branch_name">Branch Name</string>
    <string name="bank_name">Bank Name</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="account_number">Account Number</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="your_current_balance">Your Current Balance</string>
    <string name="add_bank_details">Add Bank Details</string>
    <string name="pending">Pending...</string>
    <string name="submit">Submit</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="mobile_number">Mobile number</string>
    <string name="cancel">Cancel</string>
    <string name="purchase_point">Purchase Points</string>
    <string name="str_error_internet_connections">Please check your internet connections</string>
    <string name="report_user">Report User</string>
    <string name="report">Report</string>
    <string name="please_try_again_later">Too many request. Please try again later</string>
    <string name="start_your_earnings">Start Your Earnings</string>
    <string name="verify">Verify</string>
    <string name="complete_the_verification_process_and_earn_more">Complete the verification process and earn more.</string>
    <string name="upload_your_selfie_your_selfie_pic_only_for_verification_purpose_not_showing_to_other_users">Upload your Selfie! Your selfie pic only for verification purpose not showing to other users</string>
    <string name="upload_a_picture_of_any_of_your_government_issued_id_such_as_aathar_card_pan_card">Upload a picture of any of your government issued ID such as Aathar Card, Pan Card.</string>
    <string name="profile_verification">Profile Verification</string>
    <string name="id_verification_helps_ensure_your_identity_and_keeps_things_secure_and_trustworthy">ID verification helps ensure your identity and keeps things secure and trustworthy.</string>
    <string name="important_note">Important Note</string>
    <string name="your_information_is_kept_private_and_secure_it_will_not_be_shared_with_other_users_or_any_third_parties">Your information is kept private and secure. It will not be shared with other users or any third parties.</string>
    <string name="id_proof_not_required"><strike> Id Proof Not Required </strike></string>
    <string name="selfie_image_not_required"><strike>Selfie Image Not Required</strike></string>
    <string name="dude_ways_helps_to_find_best_travel_partner">Dude Ways Helps To Find Best Travel Partner</string>
    <string name="login_with_phone">Login with Phone</string>
    <string name="login_using_your_mobile_number">Login Using Your Mobile Number</string>
    <string name="otp_send_to_this_mobile_number_9361880076">OTP Send To This Mobile Number 9361880076</string>
    <string name="select_native_language">Select Native Language</string>
    <string name="done">Done</string>
    <string name="set_profile">Set Profile</string>
    <string name="select_gender">Select Gender</string>
    <string name="female_voice_test">Female Voice Test</string>
    <string name="explore">Explore</string>
    <string name="purchase_points">Purchase points</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="earning">Earning</string>
    <string name="chat">chat</string>
    <string name="uploaded">Uploaded</string>
    <string name="upload">Upload</string>
    <string name="_800">800</string>

</resources>
