<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



    <RelativeLayout
        android:background="?attr/titleBG"
        android:id="@+id/rlToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_20sdp">

        <ImageButton
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:layout_centerVertical="true"
            android:background="@drawable/arrow_left"
            android:backgroundTint="?attr/iconColor" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_14sdp"
            android:layout_toRightOf="@+id/ivBack"
            android:fontFamily="@font/poppins_medium"
            android:text="Profile Verification"
            android:textColor="?attr/myTextColor"
            android:textSize="@dimen/_14sdp" />




    </RelativeLayout>

        <ScrollView
            android:layout_below="@+id/rlToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        <LinearLayout
            android:padding="@dimen/_14sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >



            <com.google.android.material.card.MaterialCardView
                app:cardUseCompatPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_14sdp"
                >


                <LinearLayout
                    android:padding="@dimen/_10sdp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!-- Selfie Info Text -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/complete_the_verification_process_and_earn_more"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/_10sdp"
                        android:textAlignment="center"
                        android:fontFamily="@font/poppins_semibold"
                        android:layout_marginBottom="@dimen/_10sdp" />




                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/cvUploadSelfie"
                        app:cardUseCompatPadding="true"
                        app:cardBackgroundColor="@color/primary_extra_light"
                        app:cardCornerRadius="@dimen/_60sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <LinearLayout
                            android:layout_gravity="center"
                            android:paddingVertical="@dimen/_10sdp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:id="@+id/ivUploadSelfie"
                                android:layout_gravity="center"
                                android:layout_width="@dimen/_14sdp"
                                android:layout_height="@dimen/_14sdp"
                                android:src="@drawable/ic_camera"
                                />


                            <TextView
                                android:id="@+id/tvUploadSelfie"
                                android:layout_marginLeft="@dimen/_18sdp"
                                android:layout_gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Upload Your Selfie"
                                android:textColor="@color/primary"
                                android:textSize="@dimen/_10sdp"
                                android:fontFamily="@font/poppins_semibold"
                                />



                        </LinearLayout>


                    </com.google.android.material.card.MaterialCardView>

                    <TextView
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/upload_your_selfie_your_selfie_pic_only_for_verification_purpose_not_showing_to_other_users"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/_9sdp"
                        android:textAlignment="center"
                        android:fontFamily="@font/poppins_medium"
                        android:layout_marginBottom="@dimen/_10sdp" />




                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/cvUploadIDProof"
                        app:cardUseCompatPadding="true"
                        app:cardBackgroundColor="@color/primary_extra_light"
                        app:cardCornerRadius="@dimen/_60sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <LinearLayout
                            android:layout_gravity="center"
                            android:paddingVertical="@dimen/_10sdp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:id="@+id/ivUploadIDProof"
                                android:layout_gravity="center"
                                android:layout_width="@dimen/_14sdp"
                                android:layout_height="@dimen/_14sdp"
                                android:src="@drawable/ic_camera"
                                />

                            <TextView
                                android:id="@+id/tvUploadIDProof"
                                android:layout_marginLeft="@dimen/_18sdp"
                                android:layout_gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Upload Your ID Proof"
                                android:textColor="@color/primary"
                                android:textSize="@dimen/_10sdp"
                                android:fontFamily="@font/poppins_semibold"
                                />



                        </LinearLayout>


                    </com.google.android.material.card.MaterialCardView>


                    <TextView
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/upload_a_picture_of_any_of_your_government_issued_id_such_as_aathar_card_pan_card"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/_9sdp"
                        android:textAlignment="center"
                        android:fontFamily="@font/poppins_medium"
                        android:layout_marginBottom="@dimen/_10sdp" />

                </LinearLayout>






            </com.google.android.material.card.MaterialCardView>



            <!-- Profile Verification Heading -->
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_verification"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/primary"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginTop="@dimen/_20sdp" />

            <!-- Verification Info Text -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_verification_helps_ensure_your_identity_and_keeps_things_secure_and_trustworthy"
                android:textSize="14sp"
                android:textColor="@color/text_grey"
                android:layout_marginTop="8dp"
                android:gravity="center" />




            <LinearLayout
                android:gravity="center"
                android:layout_marginTop="@dimen/_30sdp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/important_note"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/primary"
                android:layout_marginTop="@dimen/_2sdp"
                android:fontFamily="@font/poppins_medium"
                />

            <ImageView
                android:layout_marginLeft="@dimen/_4sdp"
                android:layout_gravity="center"
                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_14sdp"
                android:background="@drawable/lock_fill_ic"
                />

            </LinearLayout>

            <!-- Verification Info Text -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_information_is_kept_private_and_secure_it_will_not_be_shared_with_other_users_or_any_third_parties"
                android:textSize="14sp"
                android:textColor="@color/text_grey"
                android:layout_marginTop="8dp"
                android:gravity="center" />



            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginBottom="63dp"
                android:enabled="false"
                android:background="@drawable/gradient_button"
                android:backgroundTint="@color/grey"
                android:fontFamily="@font/poppins_medium"
                android:text="Submit"
                android:textAllCaps="false"
                android:textSize="@dimen/_14sdp"
                app:backgroundTint="@null" />


        </LinearLayout>


    </ScrollView>

    </RelativeLayout>

</layout>