<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/rlToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/titleBG"
            android:padding="@dimen/_20sdp">

            <ImageButton
                android:id="@+id/ivBack"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:layout_centerVertical="true"
                android:background="@drawable/arrow_left"
                android:backgroundTint="?attr/iconColor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_14sdp"
                android:layout_toRightOf="@+id/ivBack"
                android:fontFamily="@font/poppins_medium"
                android:text="Bank Details"
                android:textColor="?attr/myTextColor"
                android:textSize="@dimen/_14sdp" />


        </RelativeLayout>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/rlToolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="vertical">

                <!--Holder name-->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/CustomTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_13sdp"
                    android:layout_marginTop="@dimen/_13sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:hint="@string/account_holder_name"
                    android:theme="@style/CustomTextInputEditText"
                    app:hintTextColor="@color/primary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etHolderName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="start"
                        android:inputType="textMultiLine"
                        android:textSize="@dimen/_12sdp" />
                </com.google.android.material.textfield.TextInputLayout>

                <!--Account Number-->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/CustomTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_13sdp"
                    android:layout_marginTop="@dimen/_13sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:hint="@string/account_number"
                    android:theme="@style/CustomTextInputEditText"
                    app:hintTextColor="@color/primary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etAccountNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="start"
                        android:inputType="number"
                        android:textSize="@dimen/_12sdp" />
                </com.google.android.material.textfield.TextInputLayout>

                <!--IFSC Code-->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/CustomTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_13sdp"
                    android:layout_marginTop="@dimen/_13sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:hint="@string/ifsc_code"
                    android:theme="@style/CustomTextInputEditText"
                    app:hintTextColor="@color/primary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etIfsccode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="start"
                        android:inputType="text"
                        android:textSize="@dimen/_12sdp" />
                </com.google.android.material.textfield.TextInputLayout>

                <!--Bank Name-->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/CustomTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_13sdp"
                    android:layout_marginTop="@dimen/_13sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:hint="@string/bank_name"
                    android:theme="@style/CustomTextInputEditText"
                    app:hintTextColor="@color/primary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etBankName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="start"
                        android:inputType="text"
                        android:textSize="@dimen/_12sdp" />
                </com.google.android.material.textfield.TextInputLayout>

                <!--Branch Name-->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/CustomTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_13sdp"
                    android:layout_marginTop="@dimen/_13sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:hint="@string/branch_name"
                    android:theme="@style/CustomTextInputEditText"
                    app:hintTextColor="@color/primary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etBranchName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="start"
                        android:inputType="text"
                        android:textSize="@dimen/_12sdp" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="@dimen/_50sdp"
            android:layout_marginVertical="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:background="@drawable/gradient_button"
            android:fontFamily="@font/poppins_medium"
            android:text="Update"
            android:textAllCaps="false"
            android:textSize="@dimen/_14sdp"
            app:backgroundTint="@null" />


        <ProgressBar
            android:id="@+id/pbLoadData"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:theme="@style/CircularProgress"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </RelativeLayout>


</layout>
